<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">just testing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_main_title">Main Options</string>
    <string name="pref_city_title">Map</string>
    <string name="pref_city_key" translatable="false">key_location</string>
    <string name="pref_country_title">Country Code</string>
    <string name="pref_country_key" translatable="false">key_country</string>
    <string name="pref_country_default" translatable="false">GB</string>
    <string name="pref_city_default" translatable="false">Birmingham</string>
    <string name="pref_cat_temp">Temperature Units</string>
    <string name="pref_temperature_key">key_temperature</string>
    <string name="pref_temperature_title">Pick your units</string>
    <string name="pref_temper_diag_title">Pick your units</string>
    <string name="pref_temper_default">Metric</string>
    <string name="pref_temper_entry_metric">Metric</string>
    <string name="pref_temper_entry_imperial">Imperial</string>
    <string name="pref_temper_value_metric">metric</string>
    <string name="pref_temper_value_imperial">imperial</string>
    <string name="action_view_location">Location</string>
    <string name="action_share">Share</string>
</resources>
