<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_main_title">
    <EditTextPreference
        android:title="@string/pref_city_title"
        android:key="@string/pref_city_key"
        android:defaultValue="@string/pref_city_default"
        android:inputType="text"
        android:singleLine="true"
        />
    <EditTextPreference
        android:title="@string/pref_country_title"
        android:key="@string/pref_country_key"
        android:defaultValue="@string/pref_country_default"
        android:inputType="text"
        android:singleLine="true"
    />
</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_temp">
        <ListPreference
            android:key="@string/pref_temperature_key"
            android:title="@string/pref_temperature_title"
            android:dialogTitle="@string/pref_temper_diag_title"
            android:defaultValue="@string/pref_temper_default"
            android:entries="@array/pref_temper_entries"
            android:entryValues="@array/pref_temper_entryValues"
            />
    </PreferenceCategory>
</PreferenceScreen>